<resources>
    <string name="app_name">Economy</string>
    <string name="txt_email">Email</string>
    <string name="txt_Loggin">Entrar</string>
    <string name="txt_Opciones">Opciones</string>
    <string name="txt_NewUser">Crear Cuenta</string>
    <string name="txt_NewPsswd">Olvide</string>
    <string name="txt_nameUser">Nombre</string>
    <string name="title_activity_cartera">CarteraActivity</string>
    <string name="Home_title">inicio</string>
    <string name="Informes_title">informe</string>
    <string name="Movimientos_title">Movimientos</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_cartera">Crear cartera</string>
    <string name="nombreCartera">Nombre de la Cartera</string>
    <string name="saldo_inicial">Saldo inicial</string>
    <string name="txt_psswd">Contraseña</string>
    <string name="txt_bienvenida">Bienvenido a:</string>
    <string name="txt_loginTitle">Login</string>
    <string name="txt_CrearCuenta">¿Aun no estas registrado? hazlo aquí.</string>
    <string name="txt_tituloMovimientos">Mostrando todos los movimientos de:</string>
</resources>