<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:background="@color/Principal"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/Principal"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_NewUser"
            android:textSize="50dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="85dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrese para continuar"
            android:textSize="20dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#fff"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/Txt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100px"
                android:layout_marginRight="100px"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txt_email"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_psswd"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/Txt_Psswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100px"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100px"
                android:ems="10"
                android:hint="@string/txt_psswd"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Btn_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120px"
                android:layout_marginTop="35dp"
                android:layout_marginRight="120px"
                android:layout_marginBottom="80dp"
                android:text="@string/txt_Loggin"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>